<resources>
    <string name="app_name">TimeBanking</string>
    <string name="skills_str">Skills</string>
    <string name="information_str">Personal Information</string>
    <string name="description_str">Description</string>
    <string name="fullnamePH">Name Surname</string>
    <string name="nicknamePH">nickname</string>
    <string name="qualificationPH">Qualification</string>
    <string name="edit_user_profile">Edit your profile</string>
    <string name="done">Done</string>
    <string name="preference_file_key">profileData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number:</string>
    <string name="full_name">Full Name</string>
    <string name="profile_picture_filename">profile_picture.jpg</string>
    <string name="nickname">\@nickname</string>
    <string name="specify_your_qualification">Specify your qualification</string>
    <string name="default_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin orci felis, varius at felis sit amet, convallis facilisis arcu. Nam a ultricies lorem. Sed non enim a turpis faucibus vestibulum. Aliquam maximus efficitur mauris quis placerat. Curabitur sollicitudin varius sem a rutrum. Quisque vel felis condimentum, sollicitudin est in, tristique ante.</string>
    <string name="default_skills_text">This is a list of their skills:</string>
    <string name="email_text">Email:</string>
    <string name="location_text">Location:</string>
    <string name="empty_skills">No skills.</string>
    <string name="default_empty_string">DefaultEmptyString</string>
    <string name="floating_menu_load_picture">Select an image</string>
    <string name="floating_menu_shot_picture">Take a photo</string>
    <string name="noskills">No skills.</string>
    <string name="edit_skills_text">Insert here your skills: click on the + button to add a new skill.</string>
    <string name="edit_skills_text_edit_view">These are your skills: click on the + button to add a new one.</string>
    <string name="atSymbol">\@</string>
    <string name="insert_here_your_nickname">Insert here your nickname:</string>
    <string name="insert_here_your_full_name">Insert here your full name:</string>
    <string name="insert_here_your_qualification">Insert here your qualification:</string>
    <string name="example_skill1_skill2_skill3">Example: skill1, skill2, skill3&#8230;</string>
    <string name="_00_0000000000">+00 0000000000</string>
    <string name="you_mail_com">you@mail.com</string>
    <string name="new_york_new_york_usa">New York, New York, USA</string>
    <string name="describe_yourself_with_a_long_text">Describe yourself with a long text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_timeslots">All timeslots</string>
    <string name="my_timeslots">My timeslots</string>
    <string name="show_profile">Show profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="fragment_title_example">Electrician for Small Houses</string>
    <string name="fragment_description_example">I offer you assistance for any problems related to the electrical plant of your house. I only work in zones near to me (no further away than 50 miles). Good reviews available.</string>
    <string name="fragment_name_example">Mario Rossi</string>
    <string name="fragment_location_example">Corso Sebastopoli 220, Torino - Italy</string>
    <string name="fragment_date_example">Every monday morning</string>
    <string name="fragment_duration_example">5 hours</string>
    <string name="fragment_title">Time Slot Title</string>
    <string name="fragment_description">Time Slot Description</string>
    <string name="fragment_fullname">Name Surname</string>
    <string name="fragment_location">Location</string>
    <string name="fragment_date">Service Date Availability</string>
    <string name="fragment_duration">duration (credits)</string>
    <string name="more_button_for_opening_the_edit_menu">More button for opening the edit menu</string>
    <string name="separation_line">Separation line</string>
    <string name="description_of_the_job_offered">Description of the job offered</string>
    <string name="select_your_skills">Select associated skills</string>
    <string name="add_your_skills">&#8230;or add a new skill!</string>
    <string name="no_adv_into_db">There are no advertisements yet.</string>
    <string name="create_tsa_hint">Create your first\nTime Slot Advertisement</string>
    <string name="default_web_client_id_bis">945943999004-8ogsr5hkmtuqpgqac0lu172qp8kfigf7.apps.googleusercontent.com</string>
    <string name="logOut">Log out</string>
    <string name="logIn">Login with Google</string>
    <string name="welcome">Welcome!</string>
    <string name="logInToContinue">Login to continue.</string>
    <string name="menu_services">All services</string>
    <string name="no_services_into_db">There are no specific services, try "All"...</string>
    <string name="cancel">Cancel</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="reset_filters">Reset filters</string>
    <string name="where">Location</string>
    <string name="date">Date</string>
    <string name="location">Specify here the location</string>
    <string name="time">Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="welcome_message">Welcome to TimeBanking! Please insert your details to complete your profile.</string>
    <string name="ok">OK</string>
    <string name="from_date">Starting Date</string>
    <string name="plus">+</string>
    <string name="from_time">Starting Time</string>
    <string name="to_date">Ending Date</string>
    <string name="to_time">Ending Time</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="starting_time">Starting time</string>
    <string name="duration">Duration</string>
    <string name="ending_time">Ending time</string>
    <string name="starting_date">Starting date</string>
    <string name="ending_date">Ending date</string>
    <string name="min_duration">Minimum Duration</string>
    <string name="max_duration">Maximum Duration</string>
    <string name="whole_word">Whole word</string>
    <string name="min_duration_menu">Min duration</string>
    <string name="max_duration_menu">Max duration</string>
    <string name="starting_time_menu">Starting time</string>
    <string name="ending_time_menu">Ending time</string>
    <string name="starting_date_menu">Starting date</string>
    <string name="ending_date_menu">Ending date</string>
    <string name="duration_menu">Duration</string>
    <string name="search_hint">Gardening, Car repairing...</string>
    <string name="remove_your_picture">Remove your picture</string>
    <string name="welcome_message_new_profile">Welcome to TimeBanking! Before starting, please fill the following form to complete the registration phase!</string>
    <string name="ratingMessage">Please leave a feedback on the service you received with a vote between one and five stars. You can also leave a public anonymous comment.</string>
    <string name="type_a_message">Type a message</string>
    <string name="empty_chat_message">There\'s nothing here, come on: make the first move, you won\'t regret!</string>
    <string name="no_comments_in_db">This user has not received any reviews yet.</string>
    <string name="rate_advise">Your service has terminated! Please, rate your service and leave a comment</string>
    <string name="expired_advise">One or more of your timeslots are no more available! Update your advertisement date, and other users will see what you can offer.</string>
    <string name="sentence_comments_done">Reviews by people who borrowed my time:</string>
    <string name="sentence_comments_rx">Reviews by people whose time I borrowed:</string>
    <string name="show_more">Show more...</string>
    <string name="restrictions">Restrictions</string>
    <string name="describe_accurately_what_you_offer">Describe accurately what you offer.</string>
    <string name="duration_of_your_service">Duration of your service</string>
    <string name="ending_time_of_availability">Ending time of availability</string>
    <string name="starting_time_of_availability">Starting time of availability</string>
    <string name="add_restrictions_to_your_timeslot">Add restrictions to your timeslot...</string>
    <string name="faq_main_title">FAQ: let\'s talk about TimeBanking</string>
    <string name="faq_question_1">What is the concept behind the time-based currency?</string>
    <string name="faq_answer_1">In economics, a time-based currency is an alternative currency or exchange system where the unit of account is the person-hour or some other time unit. In our system, everyone\'s contributions have the same value: one hour equals four credits. Then, one person volunteers to work for an hour for another person; thus, they are credited with one hour, thus four credits, which they can redeem for some time of service from another volunteer.</string>
    <string name="faq_question_2">How can I offer a timeslot?</string>
    <string name="faq_answer_2">When you want to offer a timeslot, you just need to click the \"+\" button in the main page in order to fill a form and publish your offered timeslot. All the users will be able to see it and to start a chat with you in order to contract. Don\'t worry: you\'ll be able to edit your offered timeslot just clicking on it and selecting the \"pencil button\".</string>
    <string name="faq_question_3">I\'ve started a chat: now, how can I generate a proposal for the other user?</string>
    <string name="faq_answer_3">Just clicking on the \"+\" button above the message input field: in this way, a pre-compiled form will be showed and you\'ll be able to generate a proposal which can be then accepted or rejected by the other user.</string>
    <string name="faq_question_4">How can I filter between all the available timeslots?</string>
    <string name="faq_answer_4">There are several ways to filter the timeslots. You can select \"All services\" from the drawer menu to see the different skill categories. Otherwise, from the main page, you can click on \"Filter\" to select timeslots based on location, date and duration to best suit your needs. Then, you can sort the timeslots based on different criteria.</string>
    <string name="faq_question_5">Can I edit comments and rating on my profile?</string>
    <string name="faq_answer_5">No, you cannot. All your received comments and ratings are visible to other users.</string>
    <string name="faq_question_6">How can I offer a proposal to ask for a service?</string>
    <string name="faq_answer_6">Once you opened the chat with another user, a button will appear over the input field: by clicking on it, you will be able to present a proposal to them. In the proposal, you will select a location, a starting time and a desired duration: if you have enough credit for the selected duration and the offering user accepts your conditions, the transaction is completed.</string>
    <string name="faq_question_7">What is the state of a timeslot?</string>
</resources>