<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    tools:context=".views.setting.Guide">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FAQMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/faq_main_title"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question_1"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:text="@string/faq_answer_1"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/FAQQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question_2"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:text="@string/faq_answer_2"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/FAQQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question_3"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:text="@string/faq_answer_3"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/FAQQuestion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question_4"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:text="@string/faq_answer_4"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/FAQQuestion5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question_5"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/FAQAnswer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:text="@string/faq_answer_5"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>