<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/timeslots_from_menu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_timeslots" />

        <item android:title="User profile">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/show_profile_from_menu"
                        android:icon="@drawable/ic_menu_camera"
                        android:title="@string/show_profile" />
                    <item
                        android:id="@+id/edit_profile_from_menu"
                        android:icon="@drawable/ic_edit_black_24dp"
                        android:title="@string/edit_profile" />
            </group>
        </menu>
    </item>
</group>
</menu>